@@ -1,5 +1,13 @@
 2013-01-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
+	* include/functions_networkmap.php: Fixed entity problem in 
+	networkmap and hided agents without alerts if "only module with 
+	alerts" option enabled.
+	
+	Bug id: #3597478
+
+2013-01-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
 	* pandoradb_data.sql
 	 pandoradb.data.postgreSQL.sql
 	 pandoradb.data.oracle.sql: Added field1 to Pandora event action.
